--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 		<h1>CSS Color Markers</h1>
 		<div class="container">
 			<div class="marker red"></div>
-			<div class="sleeve">
-				
-			</div>
+			<div class="cap"></div>
+			<div class="sleeve"></div>
 			<div class="marker green"></div>
 			<div class="marker blue"></div>
 		</div>
