--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Registration Form</title>
-    
   <body>
-    
+    <h1>Registration Form</h1>
+    <p>Please fill out this form with the required information</p>
   </body>
 </html>
