--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -6,6 +6,9 @@
   <body>
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
-    <form action="https://register-demo.freecodecamp.org" method="post"></form>s
+    <form action="https://register-demo.freecodecamp.org" method="post"></form>
+    <fieldset></fieldset>
+    <fieldset></fieldset>
+    <fieldset></fieldset>
   </body>
 </html>
