--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -7,7 +7,12 @@
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
     <form action="https://register-demo.freecodecamp.org" method="post"></form>
-    <fieldset></fieldset>
+    <fieldset>
+      <label>Enter Your First Name:</label>
+      <label>Enter Your Last Name:</label>
+      <label>Enter Your Email:</label>
+      <label>Create a New Password:</label>
+    </fieldset>
     <fieldset></fieldset>
     <fieldset></fieldset>
   </body>
