--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -8,12 +8,13 @@
     <p>Please fill out this form with the required information</p>
     <form action="https://register-demo.freecodecamp.org" method="post"></form>
     <fieldset>
-      <label for="first-name">Enter Your First Name: <input id="first-name" type="text"></input></label>
-      <label for="last-name">Enter Your Last Name: <input id="last-name" type="text"></input></label>
-      <label for="email">Enter Your Email: <input id="email" type="email"></input></label>
-      <label for="new-password">Create a New Password: <input id="new-password" type="password"></input></label>
+      <label for="first-name">Enter Your First Name: <input id="first-name" type="text"></label>
+      <label for="last-name">Enter Your Last Name: <input id="last-name" type="text"></label>
+      <label for="email">Enter Your Email: <input id="email" type="email"></label>
+      <label for="new-password">Create a New Password: <input id="new-password" type="password"></label>
     </fieldset>
     <fieldset></fieldset>
     <fieldset></fieldset>
+    <input type="submit" value="Submit">
   </body>
 </html>
