--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -14,9 +14,9 @@
       <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}"></label>
     </fieldset>
     <fieldset>
-      <label></label>  
-      <label></label>  
-      <label></label>  
+      <label><input type="radio"> Personal Account</label>  
+      <label><input type="radio"> Business Account</label>  
+      <label><input type="checkbox" required> I accept the terms and conditions</label>  
     </fieldset>
     <fieldset></fieldset>
     <input type="submit" value="Submit">
