--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -14,8 +14,8 @@
       <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}"></label>
     </fieldset>
     <fieldset>
-      <label><input type="radio" name="acount-type"> Personal Account</label>  
-      <label><input type="radio" name="acount-type"> Business Account</label>  
+      <label><input type="radio" name="account-type"> Personal Account</label>  
+      <label><input type="radio" name="account-type"> Business Account</label>  
       <label><input type="checkbox" required> I accept the terms and conditions</label>  
     </fieldset>
     <fieldset></fieldset>
