--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -14,9 +14,9 @@
       <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}"></label>
     </fieldset>
     <fieldset>
-      <label><input type="radio" name="account-type"> Personal Account</label>  
-      <label><input type="radio" name="account-type"> Business Account</label>  
-      <label><input type="checkbox" required> I accept the terms and conditions</label>  
+      <label for="personal-account"><input type="radio" name="account-type" id="personal-account"> Personal Account</label>  
+      <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business Account</label>  
+      <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions"> I accept the terms and conditions</label>  
     </fieldset>
     <fieldset></fieldset>
     <input type="submit" value="Submit">
