--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -18,7 +18,10 @@
       <label for="business-account"><input type="radio" name="account-type" id="business-account"> Business Account</label>  
       <label for="terms-and-conditions"><input type="checkbox" required id="terms-and-conditions">I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
     </fieldset>
-    <fieldset></fieldset>
+    <fieldset>
+      <label> Upload a profile picture: <input type="file"> </label>
+      <label> Input your age (years): <input type="number" min="13" max="120"></label>
+    </fieldset>
     <input type="submit" value="Submit">
   </body>
 </html>
