--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -21,6 +21,15 @@
     <fieldset>
       <label> Upload a profile picture: <input type="file"> </label>
       <label> Input your age (years): <input type="number" min="13" max="120"></label>
+      <label> How did you hear about us?
+        <select>
+          <option value="">(select one)</option>
+          <option value="">freeCodeCamp News</option>
+          <option value="">freeCodeCamp YouTube Channel</option>
+          <option value="">freeCodeCamp Forum</option>
+          <option value="">Other</option>
+        </select>
+    </label>
     </fieldset>
     <input type="submit" value="Submit">
   </body>
