--- a/Registration form/index.html
+++ b/Registration form/index.html
@@ -42,7 +42,9 @@
         </select>
       </label>
 
-      <label for="bio">Provide a bio: <textarea id="bio"></textarea></label>
+      <label for="bio">Provide a bio: 
+        <textarea id="bio" rows="3" cols="30"></textarea>
+      </label>
     </fieldset>
 
     <input type="submit" value="Submit">
