refactor (html): add form element with a fieldset

--- a/Survey/index.html
+++ b/Survey/index.html
@@ -8,5 +8,11 @@
 <body>
   <h1 id="title">freeCodeCamp Survey Form</h1>
   <p id="description">Thank you for taking the time to help us improve the platform</p>
+
+  <!-- Form -->
+  <form action="" id="survey-form"></form>
+  <fieldset>
+    
+  </fieldset>
 </body>
 </html>
