refactor (html): create name and email input fields

--- a/Survey/index.html
+++ b/Survey/index.html
@@ -10,5 +10,15 @@
   <p id="description">Thank you for taking the time to help us improve the platform</p>
 
   <!-- Form -->
+  <form action="" id="survey-form">
+    <fieldset>
+      <label for="name"> Enter Your Name: 
+        <input type="text" id="name" required>
+      </label>
+      <label for="email"> Enter Your Email: 
+        <input type="email" id="email" required>
+      </label>
+    </fieldset>
+  </form>
 </body>
 </html>
