--- a/Survey/index.html
+++ b/Survey/index.html
@@ -18,6 +18,9 @@
       <label for="email"> Enter Your Email: 
         <input type="email" id="email" required>
       </label>
+      <label for="number"> Enter Your Age: 
+        <input type="number" id="number" min="12" max="120">
+      </label>
     </fieldset>
   </form>
 </body>
