refactor (html): add ids to each label element

--- a/Survey/index.html
+++ b/Survey/index.html
@@ -12,13 +12,13 @@
   <!-- Form -->
   <form action="" id="survey-form">
     <fieldset>
-      <label for="name"> Enter Your Name: 
+      <label for="name" id="name-label"> Enter Your Name: 
         <input type="text" id="name" required>
       </label>
-      <label for="email"> Enter Your Email: 
+      <label for="email" id="email-label"> Enter Your Email: 
         <input type="email" id="email" required>
       </label>
-      <label for="number"> Enter Your Age: 
+      <label for="number" id="number-label"> Enter Your Age: 
         <input type="number" id="number" min="12" max="120">
       </label>
     </fieldset>
