refactor (html): add placeholder to name, email, and age

--- a/Survey/index.html
+++ b/Survey/index.html
@@ -13,13 +13,13 @@
   <form action="" id="survey-form">
     <fieldset>
       <label for="name" id="name-label"> Enter Your Name: 
-        <input type="text" id="name" required>
+        <input type="text" id="name" required placeholder="Enter name here">
       </label>
       <label for="email" id="email-label"> Enter Your Email: 
-        <input type="email" id="email" required>
+        <input type="email" id="email" required placeholder="Enter email here">
       </label>
       <label for="number" id="number-label"> Enter Your Age: 
-        <input type="number" id="number" min="12" max="120">
+        <input type="number" id="number" min="12" max="120" placeholder="Enter age here">
       </label>
     </fieldset>
   </form>
