--- a/Survey/index.html
+++ b/Survey/index.html
@@ -18,8 +18,20 @@
       <label for="email" id="email-label"> Enter Your Email: 
         <input type="email" id="email" required placeholder="Enter email here">
       </label>
-      <label for="number" id="number-label"> Enter Your Age: 
+      <label for="number" id="number-label"> Enter Your Age (Optional): 
         <input type="number" id="number" min="12" max="120" placeholder="Enter age here">
+      </label>
+    </fieldset>
+    <fieldset>
+      <label for="droptdown"> Which option best describes your current role?
+        <select name="role" id="droptdown">
+          <option value="">Select current role</option>
+          <option value="1">Student</option>
+          <option value="2">Full Time Job</option>
+          <option value="3">Full Time Learner</option>
+          <option value="4">Prefer not to say</option>
+          <option value="5">Other</option>
+        </select>
       </label>
     </fieldset>
   </form>
