fix (html): fix misspelling of dropdown

--- a/Survey/index.html
+++ b/Survey/index.html
@@ -23,8 +23,8 @@
       </label>
     </fieldset>
     <fieldset>
-      <label for="droptdown"> Which option best describes your current role?
-        <select name="role" id="droptdown">
+      <label for="dropdown"> Which option best describes your current role?
+        <select name="role" id="dropdown">
           <option value="">Select current role</option>
           <option value="1">Student</option>
           <option value="2">Full Time Job</option>
