refactor (html): create option with radio buttons

--- a/Survey/index.html
+++ b/Survey/index.html
@@ -32,6 +32,16 @@
           <option value="4">Prefer not to say</option>
           <option value="5">Other</option>
         </select>
+        <p>Would you recommend freeCodeCamp to a friend?</p>
+        <label for="definitely"> Definitely
+          <input type="radio" name="recommend" value="definitely" id="definitely">
+        </label>
+        <label for="maybe"> Maybe
+          <input type="radio" name="recommend" value="maybe" id="maybe">
+        </label> Not sure
+        <label for="not-sure">
+          <input type="radio" name="recommend" value="not-sure" id="not-sure">
+        </label>
       </label>
     </fieldset>
   </form>
