--- a/Survey/index.html
+++ b/Survey/index.html
@@ -44,6 +44,30 @@
         </label>
       </label>
     </fieldset>
+    <fieldset>
+      <p>What would you like to see improved? <span>(Check all that apply)</span></p>
+      <label for="front-end">
+        <input type="checkbox" name="improve" value="front-end" id="front-end"> Front-end Projects
+      </label>
+      <label for="back-end">
+        <input type="checkbox" name="improve" value="back-end" id="back-end"> Back-end Projects
+      </label>
+      <label for="visualization">
+        <input type="checkbox" name="improve" value="visualization" id="visualization"> Data Visualization
+      </label>
+      <label for="challenges">
+        <input type="checkbox" name="improve" value="challenges" id="challenges"> Challenges
+      </label>
+      <label for="open-source-community">
+        <input type="checkbox" name="improve" value="open-source-community" id="open-source-community"> Open Source Community
+      </label>
+      <label for="gitter-help-rooms">
+        <input type="checkbox" name="improve" value="gitter-help-rooms" id="gitter-help-rooms"> Gitter help rooms
+      </label>
+      <label for="videos">
+        <input type="checkbox" name="improve" value="videos" id="videos"> Videos
+      </label>
+    </fieldset>
   </form>
 </body>
 </html>
