refactor (html): add textarea for suggestion or comments

--- a/Survey/index.html
+++ b/Survey/index.html
@@ -67,6 +67,9 @@
       <label for="videos">
         <input type="checkbox" name="improve" value="videos" id="videos"> Videos
       </label>
+      <label for="comments"> Any comments or suggestions?
+        <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
+      </label>
     </fieldset>
   </form>
 </body>
