--- a/Survey/index.html
+++ b/Survey/index.html
@@ -71,6 +71,7 @@
         <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
       </label>
     </fieldset>
+    <input type="submit" value="Submit">
   </form>
 </body>
 </html>
