--- a/Survey/index.html
+++ b/Survey/index.html
@@ -33,39 +33,39 @@
           <option value="5">Other</option>
         </select>
         <p>Would you recommend freeCodeCamp to a friend?</p>
-        <label for="definitely"> Definitely
-          <input type="radio" name="recommend" value="definitely" id="definitely">
+        <label for="definitely" class="inline"> 
+          <input type="radio" name="recommend" value="definitely" id="definitely" class="inline"> Definitely
         </label>
-        <label for="maybe"> Maybe
-          <input type="radio" name="recommend" value="maybe" id="maybe">
-        </label> Not sure
-        <label for="not-sure">
-          <input type="radio" name="recommend" value="not-sure" id="not-sure">
+        <label for="maybe" class="inline"> 
+          <input type="radio" name="recommend" value="maybe" id="maybe" class="inline"> Maybe
+        </label> 
+        <label for="not-sure" class="inline">
+          <input type="radio" name="recommend" value="not-sure" id="not-sure" class="inline"> Not sure
         </label>
       </label>
     </fieldset>
     <fieldset>
       <p>What would you like to see improved? <span>(Check all that apply)</span></p>
-      <label for="front-end">
-        <input type="checkbox" name="improve" value="front-end" id="front-end"> Front-end Projects
+      <label for="front-end" class="inline">
+        <input type="checkbox" name="improve" value="front-end" id="front-end" class="inline"> Front-end Projects
       </label>
-      <label for="back-end">
-        <input type="checkbox" name="improve" value="back-end" id="back-end"> Back-end Projects
+      <label for="back-end" class="inline">
+        <input type="checkbox" name="improve" value="back-end" id="back-end" class="inline"> Back-end Projects
       </label>
-      <label for="visualization">
-        <input type="checkbox" name="improve" value="visualization" id="visualization"> Data Visualization
+      <label for="visualization" class="inline">
+        <input type="checkbox" name="improve" value="visualization" id="visualization" class="inline"> Data Visualization
       </label>
-      <label for="challenges">
-        <input type="checkbox" name="improve" value="challenges" id="challenges"> Challenges
+      <label for="challenges" class="inline">
+        <input type="checkbox" name="improve" value="challenges" id="challenges" class="inline"> Challenges
       </label>
-      <label for="open-source-community">
-        <input type="checkbox" name="improve" value="open-source-community" id="open-source-community"> Open Source Community
+      <label for="open-source-community" class="inline">
+        <input type="checkbox" name="improve" value="open-source-community" id="open-source-community" class="inline"> Open Source Community
       </label>
-      <label for="gitter-help-rooms">
-        <input type="checkbox" name="improve" value="gitter-help-rooms" id="gitter-help-rooms"> Gitter help rooms
+      <label for="gitter-help-rooms" class="inline">
+        <input type="checkbox" name="improve" value="gitter-help-rooms" id="gitter-help-rooms" class="inline"> Gitter help rooms
       </label>
-      <label for="videos">
-        <input type="checkbox" name="improve" value="videos" id="videos"> Videos
+      <label for="videos" class="inline">
+        <input type="checkbox" name="improve" value="videos" id="videos" class="inline"> Videos
       </label>
       <label for="comments"> Any comments or suggestions?
         <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
