refactor (html): add title and img src in the body

--- a/CSS Box Model/index.html
+++ b/CSS Box Model/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Rothko Painting</title>
 </head>
 <body>
-  
+  <img src="https://cdn.freecodecamp.org/curriculum/css-box-model/diagram-1.png" alt="">
 </body>
 </html>
