refactor (html): set the alt for each image

--- a/Photo Gallery/index.html
+++ b/Photo Gallery/index.html
@@ -11,15 +11,15 @@
     <h1>css flexbox photo gallery</h1>
   </header>
   <div class="gallery">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="">
-    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="cat sleeping on the covers">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="cat laying on their back">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="side profie of a cat">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="cat sleeping under the covers">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="cat posing next to a window">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="two cats">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="cat awake under the covers">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="cat posing on a chair">
+    <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="white cat laying on top of a black cat">
   </div>
 </body>
 </html>
